added in bootstrap, not cleaned templates up properly

--- a/templates/scotstartup/index.html
+++ b/templates/scotstartup/index.html
@@ -5,6 +5,7 @@
 {% block title %} Home {% endblock %}
 
 {% block body_block %}
+<div class="page-header">
     <h1>hello world</h1>
    
     
@@ -35,6 +36,8 @@
     
 
     <img src="{% static "images/tokyo.jpg" %}" alt="tokyo image"/>
+
+</div>
 {% endblock %}
 
 
