cleaning up templates

--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,6 +1,8 @@
 {% extends "scotstartup/base.html %}
 
-{% body body_block %}
+{% block title %}Logout{% endblock %}
+
+{% body body %}
     <h1>Logged out<h1>
     <p>You are now logged out.</p>
 
