--- a/templates/registration/registration_complete.html
+++ b/templates/registration/registration_complete.html
@@ -1,5 +1,8 @@
 {% extends "scotstartup/base.html %}
-{% block body_block %}
+
+{% block title %}Registration Complete{% endblock %}
+
+{% block body %}
     <h1>Registration complete</h1>
     <p>You are now registered</p>
 
