--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,8 @@
 {% extends "scotstartup/base.html" %}
 
-{% block body_block %}
+{% block title %}Login{% endblock %}
+
+{% block body %}
 
 <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
 
