added panels to index for recent, featured, news and events

--- a/templates/scotstartup/index.html
+++ b/templates/scotstartup/index.html
@@ -17,11 +17,54 @@
         <strong>No companies.</strong>
     {% endif %}
     -->
+
+    
     
     <div class="row">
-        <div class="col-md-4">featured startups</div>
-        <div class="col-md-4">new startups</div>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">New Startups</h3>
+                </div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Featured Startups</h3>
+                </div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="row">
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">News</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Events</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <a href="{% url 'add_company' %}"/>Add Company</a> 
     
