--- a/templates/scotstartup/base.html
+++ b/templates/scotstartup/base.html
@@ -49,8 +49,8 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="/scotstartup/">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#news">News</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'news' %}">News</a></li>
           <li><a href="{% url 'companies' %}">Startups</a></li>
           <li><a href="{% url 'events' %}">Events</a></li>
         </ul>
