--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,14 +6,21 @@
 
 <link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
 
+<div class="row">
+                <div class="col-md-4 col-md-offset-4 text-center">
+
 <form class="form-signin" role="form" method="post" action=".">
 {% csrf_token %}
 
 <h2 class="form-signin-heading">Please sign in</h2>
 <input class="form-control" placeholder="Username" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
+</br>
 <input type="password" class="form-control" placeholder="Password" id="id_password" name="password"  required />
-
+</br>
         <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
         </form>
+
+</div>
+</div>
 
 {% endblock %}
