--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -3,10 +3,15 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-<form role="form"  method="post" action=".">
+
+<div class="row">
+        <div class="col-md-4 col-md-offset-4">
+
+
+<form role="form" method="post" action=".">
                 {% csrf_token %}
 
-<h2 class="form-signin-heading">Sign Up Here</h2>
+<h2 class="form-signin-heading text-center">Register</h2>
 
 <div class="form-group" >
  <p class="required"> <label for="id_username">Username:</label>
@@ -25,7 +30,11 @@
  <input class="form-control" id="id_password2" name="password2" type="password" placeholder="Enter password again" /></p>
 </div>
 
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" class="btn btn-default btn-block">Submit</button>
 
         </form>
+
+</div>
+</div>
+
 {% endblock %}
