--- a/templates/scotstartup/base.html
+++ b/templates/scotstartup/base.html
@@ -66,7 +66,7 @@
         </ul>
 
         <div class="col-sm-3 col-md-3 col-md-offset-1">
-          <form class="navbar-form" role="search">
+          <form class="navbar-form" role="search" action="{% url 'search' %}">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Search" name="q">
               <div class="input-group-btn">
