--- a/templates/scotstartup/search.html
+++ b/templates/scotstartup/search.html
@@ -22,7 +22,7 @@
 {% endif %}
 
 
-{% if companies %}
+{% if events %}
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">Events</h3>
