--- a/templates/scotstartup/add_event.html
+++ b/templates/scotstartup/add_event.html
@@ -3,22 +3,33 @@
     {% block title %} Add New Event {% endblock %}
 
     {% block body %}
-        <h1>Add Event</h1>
+    
+        <div class="row">
+                <div class="col-md-12">    
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Add New Event</h3>
+                        </div>
+                        <div class="panel-body">
+                            <form id="event_form" method="post" action="/scotstartup/add_event/">
+                                {% csrf_token %}
+                                {% for hidden in forms.hidden_fields %}
+                                    {{ hidden }}
+                                {% endfor %}
+                    
+                                {% for field in form.visible_fields %}
+                                    {{ field.errors }}
+                                    {{ field.help_text }}
+                                    {{ field }}
+                                    </br>
+                                    </br>
+                                {% endfor %}
+                    
+                                <input type="submit" name="submit" value="Create Event"/>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-        <form id="company_event" method="post" action="/scotstartup/add_event/">
-
-            {% csrf_token %}
-            {% for hidden in forms.hidden_fields %}
-                {{ hidden }}
-            {% endfor %}
-
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-
-            <input type="submit" name="submit" value="Create Event" />
-        </form>
-    </body>
 {% endblock %}
