--- a/templates/scotstartup/base.html
+++ b/templates/scotstartup/base.html
@@ -57,8 +57,8 @@
 
         <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
+          <li><a href="{% url 'profile' %}">Profile</a></li>
           <li><a href="{% url 'auth_logout' %}?next=/scotstartup/">Logout</a></li>
-          <li><a href="{% url 'add_company' %}">Add a New Company</a></li>
           {% else %}
           <li><a href="{% url 'registration_register' %}">Register</a></li>
           <li><a href="{% url 'auth_login' %}">Login</a></li>
